# FreetypeGL

./: .ghci  .gitignore  LICENSE  freetype-gl.cabal  stack.yaml
demo/: Demo.hs
src/Graphics/FreetypeGL/: FontManager.hs  Init.hs  Markup.hs  Mat4.hs  RGBA.hs  Shader.hs  Shaders.hs  TextBuffer.hs  TextureAtlas.hs  TextureFont.hs
src/Graphics/GL/GLEW/: Init.hs
