name:                freetype-gl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Peaker/freetype-gl#readme
license:             BSD3
license-file:        LICENSE
author:              Eyal Lotem
maintainer:          eyal.lotem@gmail.com
copyright:           2016 Eyal Lotem
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Graphics.FreetypeGL.TextBuffer
                     , Graphics.FreetypeGL.TextureFont
                     , Graphics.FreetypeGL.TextureAtlas
                     , Graphics.FreetypeGL.FontManager
                     , Graphics.FreetypeGL.Mat4
                     , Graphics.FreetypeGL.Markup
                     , Graphics.FreetypeGL.Shader
  if !os(osx)
    exposed-modules:   Graphics.GL.GLEW.Init
  build-depends:       base >= 4.7 && < 5
                     , bindings-freetype-gl == 0.1.*
                     , bytestring >= 0.9
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

executable freetype-gl-demo
  hs-source-dirs:      demo
  main-is:             Demo.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       GLFW-b == 1.4.*
                     , OpenGL >= 3.0.0
                     , base
                     , freetype-gl
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Peaker/freetype-gl
