name:                freetype-gl
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Peaker/freetype-gl#readme
license:             BSD3
license-file:        LICENSE
author:              Eyal Lotem
maintainer:          eyal.lotem@gmail.com
copyright:           2016 Eyal Lotem
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Graphics.FreetypeGL.Init
                     , Graphics.FreetypeGL.Markup
                     , Graphics.FreetypeGL.RGBA
                     , Graphics.FreetypeGL.Shaders
                     , Graphics.FreetypeGL.TextBuffer
                     , Graphics.FreetypeGL.TextureFont
                     , Graphics.FreetypeGL.TextureAtlas
  build-depends:       OpenGL >= 3.0.1
                     , base >= 4.7 && < 5
                     , bindings-freetype-gl == 0.1.*
                     , bytestring >= 0.9
                     , directory >= 1.2.2.0
                     , text >= 1.2
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

executable freetype-gl-demo
  hs-source-dirs:      demo
  main-is:             Demo.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       GLFW-b == 1.4.*
                     , OpenGL
                     , base
                     , bindings-freetype-gl
                     , bytestring
                     , freetype-gl
                     , text
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Peaker/freetype-gl
